Extract embedded definitions